# freertos-mpu-demo

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  NOTES.md  README.md
freertos-bindgen/: Cargo.toml  README.md  build.rs
freertos-bindgen/src/: access.rs  bindings.rs  default.rs  gen.rs  lib.rs  queue.rs  semaphore.rs  task.rs  timers.rs
stm32l452-nucleo-demo/: Cargo.toml  build.rs  link.x  memory.x
stm32l452-nucleo-demo/.cargo/: config.toml
stm32l452-nucleo-demo/src/: main.rs  wrapper.rs
