[package]
name = "stm32l452-nucleo-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.6"
irq = "0.2.3"
freertos-bindgen = { path = "../freertos-bindgen" }
rtt-target = "0.5.0"
panic-rtt-target = "0.1.3"

[dependencies.stm32l4xx-hal]
version = "0.7.1"
features = ["rt", "stm32l452"]
